--- a/helloworld.html
+++ b/helloworld.html
@@ -12,16 +12,25 @@
       margin: 0;
       background-repeat: no-repeat;
       background-attachment: fixed;
+      font-size: 20px;
     }
   </style>
-  <body style="background: no-repeat linear-gradient(orchid, blue);">
+  <body style="background: no-repeat linear-gradient(orchid, lightskyblue);">
     <div style="background: url(images/galaxy-4.jpg);">
-      <h1 style="text-align: center; color: whitesmoke">Page 2</h1>
+      <h1 style="text-align: center; color: whitesmoke">About Me</h1>
+    </div>
+    <div
+      style="margin: 20px; padding: 50px; border: 1px solid; background-color: #ffe4e114"
+    >
       <p style="text-align: center; color: white">
-        In my free time, I like to read.<br />
+        In my free time, I like to read.
+        <br />
         I also enjoy painting, sleeping, playing with my baby sister, and
         playing video games.
       </p>
+      <h3 style="color:midnightblue; text-align: center;">
+        My new passion is - BE A GIRL WHO CODES!
+      </h3>
     </div>
   </body>
 </html>
