--- a/helloworld.html
+++ b/helloworld.html
@@ -15,8 +15,10 @@
       font-size: 20px;
     }
   </style>
-  <body style="background: no-repeat linear-gradient(orchid, lightskyblue);">
-    <div style="background: url(images/galaxy-4.jpg);">
+  <body
+    style="background: no-repeat linear-gradient( hotpink, orange,yellow,lawngreen,skyblue,violet);"
+  >
+    <div>
       <h1 style="text-align: center; color: whitesmoke">About Me</h1>
     </div>
     <div
@@ -26,9 +28,9 @@
         In my free time, I like to read.
         <br />
         I also enjoy painting, sleeping, playing with my baby sister, and
-        playing video games.
+        playing video games.<br />
       </p>
-      <h3 style="color:midnightblue; text-align: center;">
+      <h3 style="color:blue; text-align: center;">
         My new passion is - BE A GIRL WHO CODES!
       </h3>
     </div>
