--- a/helloworld.html
+++ b/helloworld.html
@@ -22,7 +22,7 @@
       <h1 style="text-align: center; color: whitesmoke">About Me</h1>
     </div>
     <div
-      style="margin: 20px; padding: 50px; border: 1px solid; background-color: #ffe4e114"
+      style="margin: 20px; padding: 50px; border: 5px double; background-color: #ffe4e114"
     >
       <p style="text-align: center; color: white">
         In my free time, I like to read.
