Border Update For Mysha webpage

--- a/monkdiamond.html
+++ b/monkdiamond.html
@@ -26,10 +26,20 @@
         <h2 style="font-family: cursive; text-align: center ">
           Mysha's Photo Album
         </h2>
-        <img src="images/mysha-dls.jpg" width="600" height="400" />
+        <img
+          src="images/mysha-dls.jpg"
+          width="600"
+          height="400"
+          style="border: 5px solid rebeccapurple"
+        />
         <p>Me and my teacher Mrs. de los Santos</p>
         <br />
-        <img src="images/fox-closeup.jpg" width="600" height="400" />
+        <img
+          src="images/fox-closeup.jpg"
+          width="600"
+          height="400"
+          style="border: 5px solid rebeccapurple"
+        />
         <p>My favorite animal</p>
       </div>
       <p style="border: 2px solid black; font-family: cursive;">
