--- a/game.html
+++ b/game.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Security Game</title>
+    <title>Spot the Fox!</title>
     <style>
       #board {
-        border: 1px solid black;
-        background-color: gray;
+        background-color: chartreuse;
+        background-size: cover;
         height: 350px;
         width: 650px;
       }
     </style>
   </head>
-  <body>
-    <input
-      type="button"
-      value="Play"
-      style="border: 2px solid gray; margin: 5px"
-      onclick="startGame()"
-      ;
-    />
-    <div id="board"></div>
-    <script src="game.js"></script>
-  </body>
 </html>
