Code Update! Making Progress

--- a/game.html
+++ b/game.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Spot the Fox!</title>
-    <style>
-      #board {
-        background-color: chartreuse;
-        background-size: cover;
-        height: 350px;
-        width: 650px;
-      }
-    </style>
+    <title>Security Game</title>
   </head>
+  <body>
+  </body>
 </html>
