--- a/game.html
+++ b/game.html
@@ -1,8 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Security Game</title>
+    <title>Spot the Fox!</title>
+    <style>
+      #board {
+        border: 1px solid black;
+        background-color: gray;
+        width: 650px;
+        height: 350px;
+      }
+      .character {
+        background-color: cornflowerblue;
+        width: 120px;
+        height: 120px;
+        padding: 10px;
+        margin: 10px;
+        float: left;
+      }
+    </style>
   </head>
   <body>
+    <input type="button" value="Play" onclick="startGame()" />
+    <div id="board">
+      <div class="character">1</div>
+      <div class="character">2</div>
+      <div class="character">3</div>
+      <div class="character">4</div>
+      <div class="character">5</div>
+      <div class="character">6</div>
+    </div>
+    <script src="game.js"></script>
   </body>
 </html>
