--- a/coding/first-web-page/contact.html
+++ b/coding/first-web-page/contact.html
@@ -11,7 +11,7 @@
       <ul>
         <li><a href="./home.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="./contact.html">Contact Us</a></li>
       </ul>
     </nav>
     <h1>Contact Us</h1>
