--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <style>
       #board {
         border: 1px solid black;
-        background-color: gray;
+        background: lemonchiffon;
         width: 650px;
         height: 350px;
       }
@@ -16,6 +16,12 @@
         padding: 10px;
         margin: 10px;
         float: left;
+      }
+      .hidden {
+        display: none;
+      }
+      .visible {
+        display: block;
       }
     </style>
   </head>
@@ -28,7 +34,25 @@
       <div class="character">4</div>
       <div class="character">5</div>
       <div class="character">6</div>
+      <div class="character">7</div>
+      <div class="character">8</div>
     </div>
-    <script src="game.js"></script>
+    <script>
+      function startGame() {
+        gameLoop();
+      }
+      var loops = 0;
+      var characterVisible = false;
+      function gameLoop() {
+        characterVisible = !characterVisible;
+        flashCharacters();
+        loops++;
+        if ((loops = 12)) {
+          setTimeout(gameLoop, 3000);
+        } else {
+          alert("Game over!");
+        }
+      }
+    </script>
   </body>
 </html>
