--- a/timers.html
+++ b/timers.html
@@ -15,12 +15,12 @@
     crossorigin=""
   ></script>
   <style>
-    #mapid {
+    #map {
       height: 400px;
     }
   </style>
   <body>
-    <div id="mapid"></div>
+    <div id="map"></div>
     <script src="map.js"></script>
   </body>
 </html>
