I am making improvemennts to my game

--- a/game.html
+++ b/game.html
@@ -42,10 +42,10 @@
       <div class="character">5</div>
       <div class="character">6</div>
     </div>
-    <dialog
-      >Please refresh the page before you play again to reduce chances of
-      bugs!</dialog
-    >
+    <p>
+      Please refresh the page before you play again to reduce chances of bugs!
+    </p>
+
     <script src="game.js"></script>
   </body>
 </html>
