--- a/myshakhan.html
+++ b/myshakhan.html
@@ -8,9 +8,7 @@
 
   <body>
     <br />
-    <div
-      style="background-color:plum ; border: 5px solid rebeccapurple (52, 44, 211); font-family: fantasy; width: 100%"
-    >
+    <div style="background-color:plum; font-family: fantasy; width: 100%">
       <h1
         style="font-family: cursive; text-align: center; text-decoration: underline; "
       >
